# ResumeScreening

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  README_CN.md  docker-compose.yml  nginx.conf  pyproject.toml  reproduce_500.py  setup.ps1  start.ps1
.trae/: plan.md
.trae/documents/: RAG智能查询问题修复计划.md  docker-containerization-plan.md  上传简历后文件列表未清空问题修复计划.md  上传进度与删除问题修复计划.md  人脸检测优化方案.md  前端页面切换性能优化计划.md  数据分析页面优化设计计划.md  数据分析页面全面重构设计计划.md  数据分析页面问题修复计划.md  登录注册功能实施方案.md  筛选条件不生效问题分析.md  简历上传页面条件筛选问题修复计划.md  简历筛选系统功能增强计划.md  系统监控性能优化与Redis连接修复计划.md  系统监控页面设计与实施计划.md  系统监控页面重构计划.md  自然语言转筛选条件功能计划.md  角色权限评估与优化方案.md  项目需求分析报告.md  项目需求分析文档.md
.trae/rules/: project_rules.md
.trae/specs/implement-resume-screening-system/: checklist.md  spec.md  tasks.md
docs/: api.md  architecture.md  blog.md  deployment.md  development.md  usage.md
docs/en/: api.md  architecture.md  deployment.md  development.md  usage.md
docs/require_docs/: 人才简历智能筛选与管理系统.docx  人才简历项目答辩V1.0.xlsx
docs/test_resume/: 大数据开发1.docx  蔡文军-个人简历(1).docx
docs/zh/: api.md  development.md  usage.md
frontend/: __init__.py  app.py
frontend-new/: index.html
frontend-new/css/: style.css  users.css
frontend-new/js/: api.js  app.js
frontend-new/js/pages/: analysis.js  conditions.js  dashboard.js  login.js  monitor.js  talents.js  upload.js  users.js
frontend/components/: __init__.py  api_client.py  charts.py  theme.py
frontend/views/: __init__.py  analysis.py  conditions.py  resume_upload.py  talent_query.py
scripts/: clean_data.py  clear_all_databases.py  init_admin.py  init_db.py  migrate_add_content_hash.py  migrate_viewer_to_hr.py  rebuild_database.py  start.sh
src/: __init__.py  mcp_server.py
src/api/: __init__.py  deps.py  main.py
src/api/v1/: __init__.py  analysis.py  auth.py  conditions.py  monitor.py  talents.py  users.py  websocket.py
src/core/: __init__.py  auth.py  config.py  exceptions.py  logger.py  security.py  tasks.py
src/models/: __init__.py  base.py  condition.py  talent.py  user.py
src/parsers/: __init__.py  document_parser.py
src/schemas/: __init__.py  common.py  condition.py  monitor.py  talent.py  user.py
src/services/: __init__.py  log_service.py  metrics_service.py  nlp_parser.py
src/storage/: __init__.py  chroma_client.py  minio_client.py  redis_client.py
src/tools/: search_tool.py  stats_tool.py
src/utils/: __init__.py  embedding.py  face_detector.py  rag_service.py  retriever.py  school_tier_data.py
src/workflows/: __init__.py  cache_node.py  filter_node.py  parse_extract_node.py  rag_graph.py  resume_workflow.py  state.py  store_node.py
tests/: __init__.py  conftest.py  e2e_test.py  test_boolean_logic_e2e.py  test_logic.py  test_workflow_fix.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  conftest.py  test_analysis_api.py  test_api.py  test_api_full.py  test_conditions_api.py  test_talents_api.py
tests/regression/: __init__.py
tests/test_data/: __init__.py
tests/test_data/resumes/: __init__.py
tests/unit/: __init__.py  conftest.py  test_analysis_api.py  test_conditions_api.py  test_config.py  test_deps.py  test_embedding.py  test_exceptions.py  test_face_detector.py  test_logger.py  test_main.py  test_models.py  test_parsers.py  test_rag_service.py  test_schemas.py  test_security.py  test_storage.py  test_talents_api.py  test_workflows.py
